# 304-game

./: .firebaserc  .gitignore  firebase.json  firestore.rules  index.html  play.html  play_cli.py  play_gui.py  practice.html  pyproject.toml  rules.html  stats.html
.firebase/: hosting..cache
.github/workflows/: deploy-pages.yml
backend/: lobby.py  main.py  serializers.py
css/: play.css  styles.css
docs/: caps_formalism.md  play_invariants.md  rules.md  stats.xlsx
docs/bets/: 2026-04-27_304_rev01.csv  2026-04-27_304_rev02.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/puzzles/: 2026.json
frontend/src/: App.module.css  App.tsx
frontend/src/304dle/: App.tsx  main.tsx  runtime.ts  (+6 more)
functions/: index.js  package-lock.json  package.json
functions/src/: bidding.js  caps.js  constants.js  deck.js  lobby.js  names.js  play.js  scoring.js  trump.js  validation.js  views.js
functions/test/: caps.test.js  deck.test.js  scoring.test.js
game304/: __init__.py  bidding.py  caps.py  card.py  constants.py  dd.py  deck.py  errors.py  game.py  info.py  play.py  scoring.py  seating.py  state.py  trump.py  types.py
js/: hero-reveal.js  main.js  stats.js  theme.js
js/play/: app.js  firebase-actions.js  game.js  lobby.js  renderer.js  state.js
tests/: test_api_integration.py  test_bidding.py  test_caps.py  test_card.py  test_deck.py  test_game.py  test_invariant_fuzz.py  test_lobby.py  test_play.py  test_rule_edges.py  test_scoring.py  test_seating.py  test_thorough.py
tools/: generate-puzzles.ts  state_walker.py
(+84 files in other folders)
