[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game304"
version = "0.1.0"
description = "Python backend for the 304 card game"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0", "prompt_toolkit>=3.0"]

[tool.setuptools.packages.find]
include = ["game304*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
